PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.6

- Core: 
  . Added ability to disable huge pages in Zend Memory Manager through
    the environment variable USE_ZEND_ALLOC_HUGE_PAGES=0. (Dmitry)
  . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)

- ODBC:
  . Fixed bug #63171 (Script hangs after max_execution_time). (Remi)

- Opcache:
  . Fixed bug #71843 (null ptr deref ZEND_RETURN_SPEC_CONST_HANDLER).
    (Laruence)

- Postgres:
  . Fixed bug #71820 (pg_fetch_object binds parameters before
    call constructor). (Anatol)

- SPL:
  . Fixed bug #71838 (Deserializing serialized SPLObjectStorage-Object can't
    access properties in PHP). (Nikita)
  . Fixed bug #52339 (SPL autoloader breaks class_exists()). (Nikita)

- Standard:
  . Fixed bug #71837 (Wrong arrays behaviour). (Laruence)
  . Fixed bug #71840 (Unserialize accepts wrongly data). (Ryat, Laruence)

31 Mar 2016 PHP 7.0.5

- CLI Server:
  . Fixed bug #69953 (Support MKCALENDAR request method). (Christoph)

- Core:
  . Fixed bug #71756 (Call-by-reference widens scope to uninvolved functions
    when used in switch). (Laruence)
  . Fixed bug #71729 (Possible crash in zend_bin_strtod, zend_oct_strtod,
    zend_hex_strtod). (Laruence)
  . Fixed bug #71695 (Global variables are reserved before execution).
    (Laruence)
  . Fixed bug #71629 (Out-of-bounds access in php_url_decode in context
    php_stream_url_wrap_rfc2397). (mt at debian dot org)
  . Fixed bug #71622 (Strings used in pass-as-reference cannot be used to
    invoke C::$callable()). (Bob)
  . Fixed bug #71596 (Segmentation fault on ZTS with date function
    (setlocale)). (Anatol)
  . Fixed bug #71535 (Integer overflow in zend_mm_alloc_heap()). (Dmitry)
  . Fixed bug #71470 (Leaked 1 hashtable iterators). (Nikita)
  . Fixed bug #71575 (ISO C does not allow extra ‘;’ outside of a function).